Fri, Apr 5, 2024, 9:47 AM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -8,4 +8,4 @@ PORT number
 
 routers
 DNS domain name system -> what is IP address from this domain?
-DHCP Dynamic host configuration protocol -> what should be my DNS server and router?
+DHCP Dynamic host configuration protocol -> what should be my DNS server and router? automatically
