--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -9,3 +9,5 @@ PORT number
 routers
 DNS domain name system -> what is IP address from this domain?
 DHCP Dynamic host configuration protocol -> what should be my DNS server and router? automatically
+
+HTTP protocol about how websites speak to each other
