Fri, Apr 5, 2024, 9:50 AM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -10,4 +10,5 @@ routers
 DNS domain name system -> what is IP address from this domain?
 DHCP Dynamic host configuration protocol -> what should be my DNS server and router? automatically
 
-HTTP protocol about how websites speak to each other
+HTTP protocol about how websites speak to each other. standaridises packets between web servers and browsers
+HTTPS secure. encrypted and scrambled
