Fri, Apr 5, 2024, 10:45 AM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -12,3 +12,15 @@ DHCP Dynamic host configuration protocol -> what should be my DNS server and rou
 
 HTTP protocol about how websites speak to each other. standaridises packets between web servers and browsers
 HTTPS secure. encrypted and scrambled
+
+
+GET
+POST
+
+// browser to server
+GET / HTTP/2
+Host: www.harvard.edu    // http header
+
+// server reply
+HTTP/2 200
+Content-Type: text/html
