--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -22,5 +22,8 @@ GET / HTTP/2
 Host: www.harvard.edu    // http header
 
 // server reply
-HTTP/2 200
-Content-Type: text/html
+HTTP/2 200    // acknowledgment of version being used, status, 200
+Content-Type: text/html    // what kind of content?
+
+// terminal
+curl -I https://www.harvard.edu/
