Mon, Apr 8, 2024, 3:12 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -14,7 +14,16 @@ attributes
         </title>
     </head>
     <body>
-        hello, body
+        <p>
+            hello, body
+        </p>
+        <p>
+            1st paragraph
+        </p>
+        <p>
+        2nd paragraph
+        </p>
+
     </body>
 </html>
 
