--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -10,16 +10,25 @@ attributes
 <html lang="en">
     <head>
         <title>
-            hello, title
+            headings
         </title>
     </head>
     <body>
+        <h1>
+            One
+        </h1>
         <p>
             hello, body
         </p>
+        <h2>
+            Two
+        </h2>
         <p>
             1st paragraph
         </p>
+        <h3>
+            Three
+        </h3>
         <p>
             2nd paragraph
         </p>
