Mon, Apr 8, 2024, 3:18 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -33,6 +33,18 @@ attributes
             2nd paragraph
         </p>
 
+        <ul> <!-- unordered list tag -->
+            <li>foo</li>
+            <li>bar</li>
+            <li>baz</li>
+        </ul>
+
+        <ol> <!-- ordered list tag // numbered -->
+            <li>foo</li>
+            <li>bar</li>
+            <li>baz</li>
+        </ol>
+
     </body>
 </html>
 
