Mon, Apr 8, 2024, 3:21 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -45,6 +45,27 @@ attributes
             <li>baz</li>
         </ol>
 
+        <table>
+            <tr> <!-- table row -->
+                <td>1</td> <!-- table data -->
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr> <!-- table row -->
+                <td>4</td> <!-- table data -->
+                <td>5</td>
+                <td>6</td>
+            </tr>
+            <tr> <!-- table row -->
+                <td>7</td> <!-- table data -->
+                <td>8</td>
+                <td>9</td>
+            </tr>
+        </table>
+
+        <img = "">
+
+
     </body>
 </html>
 
