Mon, Apr 8, 2024, 3:25 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -63,7 +63,11 @@ attributes
             </tr>
         </table>
 
-        <img src="bridge.png">
+        <img alt="photo of bridge" src="bridge.png"> <!-- alt text before image loads -->
+
+        <video controls muted> <!-- video controls -->
+            <source src="video.mp4" type="video/mp4">
+        </video>
 
     </body>
 </html>
