Mon, Apr 8, 2024, 3:29 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -70,7 +70,7 @@ attributes
         </video>
 
         <p>
-            
+            Visit <a href="https://www.harvard.edu/">Harvard</a> <!-- anchor tag, hyper ref attribute -->
         </p>
 
     </body>
