--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -79,3 +79,21 @@ attributes
 <!--
     http-server
 -->
+
+
+<!-- meta -->
+<html  lang="en">
+    <head>
+        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <title>meta</title>
+    </head>
+</html>
+
+<html  lang="en">
+    <head>
+        <meta property="og:title" content="CS50"> <!-- copy paste a link, thumbnail -->
+        <meta property="og:description" content="Introduction etc etc">
+        <meta property="og:image" content="cat.jpg">
+        <title>meta</title>
+    </head>
+</html>
