--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -97,3 +97,18 @@ attributes
         <title>meta</title>
     </head>
 </html>
+
+
+<!-- search -->
+<html  lang="en">
+    <head>
+        <title>search</title>
+    </head>
+    <body>
+        <form>
+            <input>
+            <button>Search</button>
+        </form>
+
+    </body>
+</html>
