Mon, Apr 8, 2024, 3:40 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -112,3 +112,6 @@ attributes
 
     </body>
 </html>
+
+<!-- standard way of sending infor from browser to server-->
+https://wwww.example.com/path?key=value&key=value
