Mon, Apr 8, 2024, 3:42 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -105,13 +105,14 @@ attributes
         <title>search</title>
     </head>
     <body>
-        <form>
-            <input>
+        <form action="https://www.google.com/search" method="get">
+            <input name="q">
             <button>Search</button>
         </form>
 
     </body>
 </html>
 
-<!-- standard way of sending infor from browser to server-->
+<!-- standard way of sending info from browser to server querying-->
 https://wwww.example.com/path?key=value&key=value
+<
