Mon, Apr 8, 2024, 3:43 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -106,7 +106,7 @@ attributes
     </head>
     <body>
         <form action="https://www.google.com/search" method="get">
-            <input name="q">
+            <input name="q"> <!-- standard google ?q=dog -->
             <button>Search</button>
         </form>
 
@@ -115,4 +115,5 @@ attributes
 
 <!-- standard way of sending info from browser to server querying-->
 https://wwww.example.com/path?key=value&key=value
-<
+<!-- google's standard way of searching is ?q=cats -->
+www.google.com/search?q=cats
