Mon, Apr 8, 2024, 3:46 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -106,7 +106,7 @@ attributes
     </head>
     <body>
         <form action="https://www.google.com/search" method="get">
-            <input name="q"> <!-- standard google ?q=dog -->
+            <input autocomplete="off" autofocus name="q" placeholder="Query" type="search"> <!-- standard google ?q=dog -->
             <button>Search</button>
         </form>
 
