Mon, Apr 8, 2024, 3:51 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -117,3 +117,20 @@ attributes
 https://wwww.example.com/path?key=value&key=value
 <!-- google's standard way of searching is ?q=cats -->
 www.google.com/search?q=cats
+
+
+
+<!-- REGEX -->
+<html  lang="en">
+    <head>
+        <title>search</title>
+    </head>
+    <body>
+        <form>
+            <input autocomplete="off" autofocus name="email" placeholder="Email" type="email">
+            <button>Register</button>
+        </form>
+
+    </body>
+</html>
+
