Mon, Apr 8, 2024, 3:56 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -136,7 +136,7 @@ www.google.com/search?q=cats
     <body>
         <form>
             <!-- use regex to filter patterns-->
-            <input autocomplete="off" autofocus name="email" pattern=".+@.+/.edu" placeholder="Email" type="email">
+            <input autocomplete="off" autofocus name="email" pattern=".+@.+\.edu" placeholder="Email" type="email">
             <button>Register</button>
         </form>
     </body>
