Mon, Apr 8, 2024, 4:00 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -127,7 +127,10 @@ www.google.com/search?q=cats
 ? 0 or 1 time
 {n} n occurrences
 {n,m} n to m occurrences
-
+[012345] any one of the enclosed char
+[0-9] range of chars
+\d any digit
+\D character that is not a digit
 -->
 <html  lang="en">
     <head>
