Mon, Apr 8, 2024, 4:03 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -145,5 +145,6 @@ www.google.com/search?q=cats
     </body>
 </html>
 
-<!-- validator.w3.org -->
+<!-- validator.w3.org
+to syntactically check yr http -->
 
