Mon, Apr 8, 2024, 4:09 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -148,3 +148,34 @@ www.google.com/search?q=cats
 <!-- validator.w3.org
 to syntactically check yr http -->
 
+
+<!-- CSS
+
+type selector
+class selector
+ID selector
+attribute selector
+
+in html
+<style></style>
+
+css
+<link href="styles.css" rel="stylesheet"> #relegate the style to a css file
+-->
+
+<html  lang="en">
+    <head>
+        <title>home</title>
+    </head>
+    <body>
+        <p>
+            Harvard
+        </p>
+        <p>
+            Welcome home
+        </p>
+        <p>
+            Footer
+        </p>
+    </body>
+</html>
