Mon, Apr 8, 2024, 4:14 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -168,14 +168,14 @@ css
         <title>home</title>
     </head>
     <body>
-        <p>
+        <div style="font-size: large; text-align: centre;"> <!-- property is key value pair-->
             Harvard
-        </p>
-        <p>
+        </div> <!-- divisions of the page -->
+        <div style="font-size: medium; text-align: centre;">
             Welcome home
-        </p>
-        <p>
+        </div>
+        <div style="font-size: small; text-align: centre;">
             Footer
-        </p>
+        </div>
     </body>
 </html>
