Mon, Apr 8, 2024, 4:15 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -167,14 +167,14 @@ css
     <head>
         <title>home</title>
     </head>
-    <body>
-        <div style="font-size: large; text-align: centre;"> <!-- property is key value pair-->
+    <body style="text-align: centre;">
+        <div style="font-size: large> <!-- property is key value pair-->
             Harvard
         </div> <!-- divisions of the page -->
-        <div style="font-size: medium; text-align: centre;">
+        <div style="font-size: medium">
             Welcome home
         </div>
-        <div style="font-size: small; text-align: centre;">
+        <div style="font-size: small">
             Footer
         </div>
     </body>
