Mon, Apr 8, 2024, 4:17 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -163,12 +163,12 @@ css
 <link href="styles.css" rel="stylesheet"> #relegate the style to a css file
 -->
 
-<html  lang="en">
+<html lang="en">
     <head>
         <title>home</title>
     </head>
-    <body style="text-align: centre;">
-        <div style="font-size: large> <!-- property is key value pair-->
+    <body style="text-align: centre"> <!-- putting the text align style here, effect cascades downward-->
+        <div style="font-size: large"> <!--property is key value pair -->
             Harvard
         </div> <!-- divisions of the page -->
         <div style="font-size: medium">
@@ -179,3 +179,5 @@ css
         </div>
     </body>
 </html>
+
+<!---->
