Mon, Apr 8, 2024, 4:19 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -175,7 +175,7 @@ css
             Welcome home
         </div>
         <div style="font-size: small">
-            Footer
+            Copyright &#169; <!-- code for the html entity-->
         </div>
     </body>
 </html>
