Mon, Apr 8, 2024, 4:22 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -180,4 +180,25 @@ css
     </body>
 </html>
 
-<!---->
+<!--improvement-->
+<head>
+    <style> <!-- style tag -->
+
+
+
+
+    </style>
+    <title>home</title>
+</head>
+<body>
+    <header> <!--sementic tags just for readability -->
+        Harvard
+    </header>
+    <main>
+        Welcome home
+    </main>
+    <footer>
+        Copyright &#169;
+    </footer>
+</body>
+</html>
