Mon, Apr 8, 2024, 4:26 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -180,12 +180,29 @@ css
     </body>
 </html>
 
-<!--improvement-->
+<!--improvement seperating style w data-->
 <head>
     <style> <!-- style tag -->
 
+        .centered <!-- creating your own class style. call it any name, prefix with . -->
+        {
+            text-align: centre;
+        }
 
+        .header
+        {
+            font-size: large;
+        }
 
+        .main
+        {
+            font-size: medium;
+        }
+
+        .footer
+        {
+            font-size: small;
+        }
 
     </style>
     <title>home</title>
