Mon, Apr 8, 2024, 4:31 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -207,7 +207,7 @@ css
     </style>
     <title>home</title>
 </head>
-<body class="centred">
+<body class="centred"> <!-- using the classes from above -->
     <header class="large"> <!--sementic tags just for readability -->
         Harvard
     </header>
@@ -219,3 +219,45 @@ css
     </footer>
 </body>
 </html>
+
+<!-- improving more, creating your .css -->
+
+<head> <!-- style tag -->
+    <style>
+
+        .centered <!-- creating your own class style. call it any name, prefix with . -->
+        {
+            text-align: centre;
+        }
+
+        .large
+        {
+            font-size: large;
+        }
+
+        .medium
+        {
+            font-size: medium;
+        }
+
+        .small
+        {
+            font-size: small;
+        }
+
+    </style>
+    <title>home</title>
+</head>
+<body class="centred"> <!-- using the classes from above -->
+    <header class="large"> <!--sementic tags just for readability -->
+        Harvard
+    </header>
+    <main class="medium">
+        Welcome home
+    </main>
+    <footer class="small">
+        Copyright &#169;
+    </footer>
+</body>
+</html>
+
