Mon, Apr 8, 2024, 9:54 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -278,3 +278,21 @@ css
 
 </html>
 
+
+
+<!-- bootstrap example -->
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        
+
+        <title>link</title>
+    </head>
+    <body>
+            Visit <a href="https://www.harvard.edu/" id="harvard">Harvard</a> <!-- create unique id. can be any thing-->
+            or <a href="https://www.yale.edu/" id="yale">Yale</a>.
+    </body>
+
+</html>
+
