--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -285,7 +285,7 @@ css
 
 <html lang="en">
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="..">
 
         <title>link</title>
     </head>
