--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -320,8 +320,6 @@ css
 
 <!-- javascript example 2 -->
 
-<!-- javascript -->
-
 <html lang="en">
     <head>
     </head>
@@ -333,7 +331,7 @@ css
         <script> <!-- select from this document, the form, use method add listener to listen for submit, you will call the function(event) alert(...)-->
             document.querySelector('form').addEventListener('submit', function(event) {
                 alert('hello, ' + document.querySelector('#name').value);
-                event.preventDefault();
+                event.preventDefault(); <!-- dont submit to server, keep user here -->
             });
         </script>
 
@@ -342,3 +340,26 @@ css
 
 </html>
 
+<!-- javascript example 3 -->
+
+<html lang="en">
+    <head>
+    </head>
+    <body> <!-- different way to do same thing, but seperate the script from the html more. More common -->
+        <form>
+            <input autocomplete="off" autofocus id="name" placeholder="Name"> <!-- given the input the unique #name ID -->
+            <input type="submit">
+        </form>
+        <script> <!-- DOM document object model -->
+            document.addEventListener('DOMContentLoaded', function() { <!-- wait for all content to be pulled in and loaded first, then call the function() {...}-->
+                document.querySelector('form').addEventListener('submit', function(event) { <!-- select from this document, the form, use method add listener to listen for submit, you will call the function(event) alert(...)-->
+                    alert('hello, ' + document.querySelector('#name').value);
+                    event.preventDefault(); <!-- dont submit to server, keep user here -->
+                });
+            });
+        </script>
+
+
+    </body>
+
+</html>
