Tue, Apr 9, 2024, 11:58 AM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -376,7 +376,12 @@ css
         <button id="blue">B</button>
 
         <script>
-            
+
+            let body = document.querySelector('body');
+            document.querySelector('#red').addEventListener('click', function(event){
+                body.style.backgroundColor = 'red';
+            });
+            document.querySelector
         </script>
 
 
