--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -377,9 +377,15 @@ css
 
         <script>
 
-            let body = document.querySelector('body');
-            document.querySelector('#red').addEventListener('click', function(event){
+            let body = document.querySelector('body'); <!-- select this tag-->
+            document.querySelector('#red').addEventListener('click', function(){
                 body.style.backgroundColor = 'red';
+            });
+            document.querySelector('#green').addEventListener('click', function(){
+                body.style.backgroundColor = 'green';
+            });
+            document.querySelector('#blue').addEventListener('click', function(){
+                body.style.backgroundColor = 'blue';
             });
             document.querySelector
         </script>
