--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -364,7 +364,7 @@ css
 
 </html>
 
-<!-- javascript example 4-->
+<!-- javascript example 4 color buttons-->
 
 <html lang="en">
     <head>
@@ -391,6 +391,71 @@ css
         </script>
 
 
+    </body>
+
+</html>
+
+
+<!-- javascript example 5 blink -->
+
+<html lang="en">
+    <head>
+        <script>
+
+            function blink()
+            {
+                let body = document.querySelector('body');
+                if (body.style.visibility == 'hidden')
+                {
+                    body.style.visibility = 'visible';
+                }
+                else
+                {
+                    body.style.visibility = 'hidden';
+                }
+            }
+
+            // blink every 500 ms
+            windows.setInterval(blink, 500); // not calling the blink function, just informing setInterval of the name of the function
+        </script>
+    </head>
+
+    <body>
+        <p>
+            hello, world
+        </p>
+    </body>
+
+</html>
+
+<!-- javascript example 5 blink -->
+
+<html lang="en">
+    <head>
+        <script>
+
+            function blink()
+            {
+                let body = document.querySelector('body');
+                if (body.style.visibility == 'hidden')
+                {
+                    body.style.visibility = 'visible';
+                }
+                else
+                {
+                    body.style.visibility = 'hidden';
+                }
+            }
+
+            // blink every 500 ms
+
+        windows.setInterval(blink, 500); // not calling the blink function, just informing setInterval of the name of the function
+
+    </head>
+    <body>
+        <p>
+            hello, world
+        </p>
     </body>
 
 </html>
