Tue, Apr 9, 2024, 12:21 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -430,32 +430,31 @@ css
 
 <!-- javascript example 5 blink -->
 
-<html lang="en">
-    <head>
-        <script>
+...
 
-            function blink()
-            {
-                let body = document.querySelector('body');
-                if (body.style.visibility == 'hidden')
-                {
-                    body.style.visibility = 'visible';
-                }
-                else
-                {
-                    body.style.visibility = 'hidden';
-                }
-            }
-
-            // blink every 500 ms
-
-        windows.setInterval(blink, 500); // not calling the blink function, just informing setInterval of the name of the function
-
-    </head>
     <body>
-        <p>
-            hello, world
-        </p>
-    </body>
+        ...
 
-</html>
+        <input autocomplete="off" autofocus placeholder="Query" type="text">
+        <ul></ul>
+
+        <script src="large.js"></script>
+        <script>
+            
+
+
+
+
+
+        </script>
+
+
+
+
+
+<!-- large.js
+    javascript arrays = [] like python lists
+
+
+
+-->
