--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -440,7 +440,17 @@ css
 
         <script src="large.js"></script>
         <script>
-            
+
+            let input = document.querySelector('input'); // use query selector function to get the input textbox
+            input.addEventListener('keyup', function(event) {  // add a listener to the input for event keyup
+                let html = ''; //when it hears the event it will do the following
+                if (input.value) { // if the input has a value
+                    for (word of WORDS) { //similar to for loop, words IN WORDS}
+
+                }
+
+
+            }
 
 
 
