--- a/trivia/index.html
+++ b/trivia/index.html
@@ -18,6 +18,35 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
+			<title>How much wood does a wood chuck chuck?</title>
+		</hr>
+		<table>
+			<tr>
+				<td><button id="a1">3</button></td>
+				<td><button id="a2">5</button></td>
+				<td><button id="a3">9</button></td>
+			</tr>
+			<tr>
+				<td><a1txt>INCORRECT</a1txt></td>
+				<td><a2txt>INCORRECT</a2txt></td>
+				<td><a3txt>CORRECT</a3txt></td>
+			</tr>
+		</table>
+		</p>
+		<script>
+			let body = document.querySelector('body');
+
+			document.querySelector('#a1').addEventListener('click', function(event){
+				document.querySelector('a1txt').style.visibility = 'visible';
+				document.querySelector('a2txt').style.visibility = 'hidden';
+				document.querySelector('a3txt').style.visibility = 'hidden';
+				}
+			document.querySelector('#a2').addEventListener('click', function(){});
+			document.querySelector('#a3').addEventListener('click', function(){});
+
+
+		</script>
+
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
