Tue, Apr 9, 2024, 2:21 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -27,7 +27,7 @@
 				<td><button id="a3">9</button></td>
 			</tr>
 			<tr>
-				<td><a1txt>INCORRECT</a1txt></td>
+				<td><a1txt visibility='hidden'>INCORRECT</a1txt></td>
 				<td><a2txt>INCORRECT</a2txt></td>
 				<td><a3txt>CORRECT</a3txt></td>
 			</tr>
