Tue, Apr 9, 2024, 2:25 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -246,7 +246,7 @@ css
     <head>
         <style>
 
-            #harvard <!-- # is unique id, created below . is class -->
+            #harvard // # is unique id, created below . is class
             {
                 color: red;
             }
