--- a/trivia/index.html
+++ b/trivia/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -15,7 +14,48 @@
         <div class="container">
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
-                <hr>
+		<h3>
+			How much wood does a wood chuck chuck?
+		</h3>
+		<table class="center">
+			<tr>
+				<td class="incorrect"><button>3</button></td>
+				<td class="incorrect"><button>5</button></td>
+				<td class="incorrect"><button>7</button></td>
+				<td class="correct"><button>9</button></td>
+				<td class="incorrect"><button>12</button></td>
+				<h4 class="feedback"></h4>
+			</tr>
+		</table>
+		<script>
+			document.addEventListener('DOMContentLoaded', function() {
+
+				let correct = body.querySelectorAll('.correct'); // a list of all correct class
+				for (let i = 0; i < correct.length; i++) {
+					correct[i].addEventListener('click', function(event){
+						correct[i].style.color = 'green';
+						correct[i].style.borderColor = 'green';
+						correct[i].parentElement.querySelector('.feedback').innerHTML = 'Correct!';
+						correct[i].parentElement.querySelector('.feedback').style.color = 'green';
+					});
+				}
+
+
+				let incorrect = body.querySelectorAll('.incorrect'); // a list of all correct class
+				for (let i = 0; i < incorrect.length; i++) {
+					incorrect[i].addEventListener('click', function(event){
+						incorrect[i].style.color = 'red';
+						incorrect[i].style.borderColor = 'red';
+						incorrect[i].parentElement.querySelector('.feedback').innerHTML = 'Incorrect';
+						incorrect[i].parentElement.querySelector('.feedback').style.color = 'red';
+					});
+				}
+			});
+
+
+
+		</script>
+
             </div>
 
             <div class="section">
