Tue, Apr 9, 2024, 9:53 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -41,7 +41,7 @@
 				}
 
 
-				let incorrect = body.querySelectorAll('.incorrect'); // a list of all correct class
+				let incorrect = body.querySelectorAll('.incorrect'); // a list of all incorrect class
 				for (let i = 0; i < incorrect.length; i++) {
 					incorrect[i].addEventListener('click', function(event){
 						incorrect[i].style.color = 'red';
