Wed, Apr 17, 2024, 2:29 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -151,9 +151,14 @@ to syntactically check yr http -->
 
 <!-- CSS
 
-type selector
-class selector
-ID selector
+type selector  document.querySelector('name')
+class selector document.querySelector('.name')
+ID selector    document.querySelector('#name')
+
+decaring
+class="name"
+id="name"
+
 attribute selector
 
 in html
