Wed, Apr 17, 2024, 2:31 PM +08:00

--- a/MARKUP/syntax.html
+++ b/MARKUP/syntax.html
@@ -157,7 +157,17 @@ ID selector    document.querySelector('#name')
 
 decaring
 class="name"
+.name {
+
+}
+
+type
+h1 {
+
+}
+
 id="name"
+
 
 attribute selector
 
